--- a/mobile/04_UI_ADHPAbM02.html
+++ b/mobile/04_UI_ADHPAbM02.html
@@ -90,107 +90,67 @@
                                 </div>
                             </div>
 
-                            <div class="board_list">
+                            <div class="board_list join_request_list">
                                 <ul>
                                     <li class="board_li">
-                                        <dl>
-                                            <div class="board_list_row">
-                                                <dt>참여연도</dt>
-                                                <dd>2025</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>참여대학명</dt>
-                                                <dd>AAA 대학교</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>제출일자</dt>
-                                                <dd>2025-08-01</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>진행상태</dt>
-                                                <dd>신청</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>담당자</dt>
-                                                <dd>홍길동</dd>
-                                            </div>
+                                        <dl class="mb16">
+                                            <dt>참여연도</dt>
+                                            <dd>2025</dd>
+                                            <dt>참여대학명</dt>
+                                            <dd>AAA 대학교</dd>
+                                            <dt>제출일자</dt>
+                                            <dd>2025-08-01</dd>
+                                            <dt>진행상태</dt>
+                                            <dd>신청</dd>
+                                            <dt>담당자</dt>
+                                            <dd>홍길동</dd>
                                         </dl>
-                                        <a href="#" class="btn semilarge type01 mb16">상세보기</a>
+                                        <a href="#" class="btn semilarge type01">상세보기</a>
                                     </li>
                                     <li class="board_li">
-                                        <dl>
-                                            <div class="board_list_row">
-                                                <dt>참여연도</dt>
-                                                <dd>2025</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>참여대학명</dt>
-                                                <dd>BBB 대학교</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>제출일자</dt>
-                                                <dd>2025-08-01</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>진행상태</dt>
-                                                <dd>접수</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>담당자</dt>
-                                                <dd>홍길동</dd>
-                                            </div>
+                                        <dl class="mb16">
+                                            <dt>참여연도</dt>
+                                            <dd>2025</dd>
+                                            <dt>참여대학명</dt>
+                                            <dd>BBB 대학교</dd>
+                                            <dt>제출일자</dt>
+                                            <dd>2025-08-01</dd>
+                                            <dt>진행상태</dt>
+                                            <dd>접수</dd>
+                                            <dt>담당자</dt>
+                                            <dd>홍길동</dd>
                                         </dl>
-                                        <a href="#" class="btn semilarge type01 mb16">상세보기</a>
+                                        <a href="#" class="btn semilarge type01">상세보기</a>
                                     </li>
                                     <li class="board_li">
-                                        <dl>
-                                            <div class="board_list_row">
-                                                <dt>참여연도</dt>
-                                                <dd>2025</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>참여대학명</dt>
-                                                <dd>CCC 대학교</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>제출일자</dt>
-                                                <dd>2025-08-01</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>진행상태</dt>
-                                                <dd>인정</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>담당자</dt>
-                                                <dd>홍길동</dd>
-                                            </div>
+                                        <dl class="mb16">
+                                            <dt>참여연도</dt>
+                                            <dd>2025</dd>
+                                            <dt>참여대학명</dt>
+                                            <dd>CCC 대학교</dd>
+                                            <dt>제출일자</dt>
+                                            <dd>2025-08-01</dd>
+                                            <dt>진행상태</dt>
+                                            <dd>인정</dd>
+                                            <dt>담당자</dt>
+                                            <dd>홍길동</dd>
                                         </dl>
-                                        <a href="#" class="btn semilarge type01 mb16">상세보기</a>
+                                        <a href="#" class="btn semilarge type01">상세보기</a>
                                     </li>
                                     <li class="board_li">
-                                        <dl>
-                                            <div class="board_list_row">
-                                                <dt>참여연도</dt>
-                                                <dd>2025</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>참여대학명</dt>
-                                                <dd>DDD 대학교 DDD 대학교 DDD 대학교 DDD 대학교 DDD 대학교 DDD 대학교</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>제출일자</dt>
-                                                <dd>2025-08-01</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>진행상태</dt>
-                                                <dd>접수</dd>
-                                            </div>
-                                            <div class="board_list_row">
-                                                <dt>담당자</dt>
-                                                <dd>홍길동</dd>
-                                            </div>
+                                        <dl class="mb16">
+                                            <dt>참여연도</dt>
+                                            <dd>2025</dd>
+                                            <dt>참여대학명</dt>
+                                            <dd>DDD 대학교 DDD 대학교 DDD 대학교 DDD 대학교 DDD 대학교 DDD 대학교</dd>
+                                            <dt>제출일자</dt>
+                                            <dd>2025-08-01</dd>
+                                            <dt>진행상태</dt>
+                                            <dd>접수</dd>
+                                            <dt>담당자</dt>
+                                            <dd>홍길동</dd>
                                         </dl>
-                                        <a href="#" class="btn semilarge type01 mb16">상세보기</a>
+                                        <a href="#" class="btn semilarge type01">상세보기</a>
                                     </li>
                                 </ul>
                             </div>
