--- a/mobile/07_UI_ADHPAbS05.html
+++ b/mobile/07_UI_ADHPAbS05.html
@@ -36,22 +36,14 @@
                                 <h3 class="t2_sb">신청인 기본정보</h3>
                                 <div class="box_table_wrap top_linewrap">
                                     <dl>
-                                        <div class="dl_name">
-                                            <dt>성명</dt>
-                                            <dd>홍길동</dd>
-                                        </div>
-                                        <div class="dl_tel">
-                                            <dt>전화번호</dt>
-                                            <dd>010-0000-0000</dd>
-                                        </div>
-                                        <div class="dl_mail">
-                                            <dt>이메일</dt>
-                                            <dd>email@mail.com</dd>
-                                        </div>
-                                        <div class="dl_addr">
-                                            <dt>주소</dt>
-                                            <dd>(27740) 충청북도 음성군 맹동면 태정로 6 한국고용정보원</dd>
-                                        </div>
+                                        <dt>성명</dt>
+                                        <dd>홍길동</dd>
+                                        <dt>전화번호</dt>
+                                        <dd>010-0000-0000</dd>
+                                        <dt>이메일</dt>
+                                        <dd>email@mail.com</dd>
+                                        <dt>주소</dt>
+                                        <dd>(27740) 충청북도 음성군 맹동면 태정로 6 한국고용정보원</dd>
                                     </dl>
                                     <div class="box_btn_wrap ml_auto mt24">
                                         <a href="#" class="btn semilarge type03">회원정보 수정</a>
@@ -63,43 +55,39 @@
                                 <h3 class="t2_sb">참여대학 및 분류</h3>
                                 <div class="box_table_wrap">
                                     <dl>
-                                        <div class="dl_uni">
-                                            <dt>참여대학</dt>
-                                            <dd>
-                                                <div class="box_table_group">
-                                                    <div class="cell">
-                                                        <span class="box_ipt new_ipt">
-                                                            <input type="text" id="bassAdrTxt" class="input_txt" title="대학교 명" readonly="" placeholder="AAA 대학교">
-                                                        </span>
-                                                    </div>
-                                                    <button type="button" class="btn medium type01 btnSearch" id="btnSearch" name="btnSearch" aria-haspopup="dialog">검색</button>
+                                        <dt>참여대학</dt>
+                                        <dd>
+                                            <div class="box_table_group">
+                                                <div class="cell">
+                                                    <span class="box_ipt new_ipt">
+                                                        <input type="text" id="bassAdrTxt" class="input_txt" title="대학교 명" readonly="" placeholder="AAA 대학교">
+                                                    </span>
                                                 </div>
-                                            </dd>
-                                        </div>
-                                        <div class="dl_person">
-                                            <dt class="req_mark">참여자 분류</dt>
-                                            <dd>
-                                                <fieldset class="radio_filed">
-                                                    <legend class="sr_only">참여자 분류 선택</legend>
-                                                    <div class="new_radio_item">
-                                                        <input type="radio" id="customType1" name="customType" value="graduate" checked>
-                                                        <label for="customType1" class="custom_radio">
-                                                            <span class="radio_ui" aria-hidden="true"></span>
-                                                            <span class="sr_only">선택지 1:</span>
-                                                            <span class="label_text">&#9312; 졸업생 특화 프로그램을 운영하는 대학(원)의 졸업생, 졸업 유예자 및 예정자</span>
-                                                        </label>
-                                                    </div>
-                                                    <div class="new_radio_item">
-                                                        <input type="radio" id="customType2" name="customType" value="youth">
-                                                        <label for="customType2" class="custom_radio">
-                                                            <span class="radio_ui" aria-hidden="true"></span>
-                                                            <span class="sr_only">선택지 2:</span>
-                                                            <span class="label_text">&#9313; ①에 해당하지 않는 직업계고 졸업생, 미취업 지역 청년</span>
-                                                        </label>
-                                                    </div>
-                                                </fieldset>
-                                            </dd>
-                                        </div>
+                                                <button type="button" class="btn medium type01 btnSearch" id="btnSearch" name="btnSearch" aria-haspopup="dialog">검색</button>
+                                            </div>
+                                        </dd>
+                                        <dt class="req_mark">참여자 분류</dt>
+                                        <dd>
+                                            <fieldset class="radio_filed">
+                                                <legend class="sr_only">참여자 분류 선택</legend>
+                                                <div class="new_radio_item">
+                                                    <input type="radio" id="customType1" name="customType" value="graduate" checked>
+                                                    <label for="customType1" class="custom_radio">
+                                                        <span class="radio_ui" aria-hidden="true"></span>
+                                                        <span class="sr_only">선택지 1:</span>
+                                                        <span class="label_text">&#9312; 졸업생 특화 프로그램을 운영하는 대학(원)의 졸업생, 졸업 유예자 및 예정자</span>
+                                                    </label>
+                                                </div>
+                                                <div class="new_radio_item">
+                                                    <input type="radio" id="customType2" name="customType" value="youth">
+                                                    <label for="customType2" class="custom_radio">
+                                                        <span class="radio_ui" aria-hidden="true"></span>
+                                                        <span class="sr_only">선택지 2:</span>
+                                                        <span class="label_text">&#9313; ①에 해당하지 않는 직업계고 졸업생, 미취업 지역 청년</span>
+                                                    </label>
+                                                </div>
+                                            </fieldset>
+                                        </dd>
                                     </dl>
                                 </div>
                             </div>
@@ -108,64 +96,54 @@
                                 <h3 class="t2_sb">학적 정보</h3>
                                 <div class="box_table_wrap">
                                     <dl>
-                                        <div class="dl_id">
-                                            <dt class="req_mark"><label for="studentId">학번<span class="blind"> 필수입력</span></label></dt>
-                                            <dd><input type="text" id="studentId" name="studentId" placeholder="학번을 입력해 주세요." title="학번 입력" required></dd>
-                                        </div>
-                                        <div class="dl_grade">
-                                            <dt class="req_mark"><label for="grade">학년<span class="blind"> 필수선택</span></label></dt>
-                                            <dd>
-                                                <select class="new_down" id="grade" name="grade" title="학년 선택" required>
-                                                    <option value="" selected disabled>학년을 선택해 주세요.</option>
-                                                    <option value="1">1학년</option>
-                                                    <option value="2">2학년</option>
-                                                    <option value="3">3학년</option>
-                                                    <option value="4">4학년</option>
-                                                    <option value="5">5학년</option>
-                                                </select>
-                                            </dd>
-                                        </div>
-                                        <div class="dl_major">
-                                            <dt class="req_mark"><label for="major">전공<span class="blind"> 필수입력</span></label></dt>
-                                            <dd class="dd_twincell">
-                                                <div class="box_table_group">
-                                                    <div class="cell">
-                                                        <span class="box_ipt new_ipt">
-                                                            <input type="text" id="major" class="input_txt" title="전공명" readonly placeholder="전공" required>
-                                                            <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
-                                                        </span>
-                                                    </div>
+                                        <dt class="req_mark"><label for="studentId">학번<span class="blind"> 필수입력</span></label></dt>
+                                        <dd class="dd_id"><input type="text" id="studentId" name="studentId" placeholder="학번을 입력해 주세요." title="학번 입력" required></dd>
+                                        <dt class="req_mark"><label for="grade">학년<span class="blind"> 필수선택</span></label></dt>
+                                        <dd>
+                                            <select class="new_down" id="grade" name="grade" title="학년 선택" required>
+                                                <option value="" selected disabled>학년을 선택해 주세요.</option>
+                                                <option value="1">1학년</option>
+                                                <option value="2">2학년</option>
+                                                <option value="3">3학년</option>
+                                                <option value="4">4학년</option>
+                                                <option value="5">5학년</option>
+                                            </select>
+                                        </dd>
+                                        <dt class="req_mark"><label for="major">전공<span class="blind"> 필수입력</span></label></dt>
+                                        <dd class="dd_twincell">
+                                            <div class="box_table_group">
+                                                <div class="cell">
+                                                    <span class="box_ipt new_ipt">
+                                                        <input type="text" id="major" class="input_txt" title="전공명" readonly placeholder="전공" required>
+                                                        <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
+                                                    </span>
                                                 </div>
-                                                <div class="box_table_group">
-                                                    <div class="cell">
-                                                        <span class="box_ipt new_ipt">
-                                                            <input type="text" id="department" class="input_txt" title="학과명" readonly placeholder="학과" required>
-                                                            <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
-                                                        </span>
-                                                    </div>
-                                                    <button type="button" class="btn medium type01 btnSearch" id="btnSearch" name="btnSearch" aria-haspopup="dialog">검색</button>
+                                            </div>
+                                            <div class="box_table_group">
+                                                <div class="cell">
+                                                    <span class="box_ipt new_ipt">
+                                                        <input type="text" id="department" class="input_txt" title="학과명" readonly placeholder="학과" required>
+                                                        <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
+                                                    </span>
                                                 </div>
-                                            </dd>
-                                        </div>
-                                        <div class="dl_status">
-                                            <dt class="req_mark"><label for="status">상태<span class="blind"> 필수입력</span></label></dt>
-                                            <dd>
-                                                <select class="new_down" id="status" name="status" title="학적 상태 선택" required>
-                                                    <option value="" selected disabled>학적 상태를 선택해 주세요.</option>
-                                                    <option value="graduated">졸업</option>
-                                                    <option value="expected">졸업예정</option>
-                                                </select>
-                                            </dd>
-                                        </div>
-                                        <div class="dl_date">
-                                            <dt class="req_mark"><label for="gradDate">졸업(예정) 년월<span class="blind"> 필수입력</span></label></dt>
-                                            <dd>
-                                                <div class="date_area">
-                                                    <input type="text" title="졸업(예정) 날짜 입력" id="gradDate" name="gradDate" value="" placeholder="2025-01" class="hasDatepicker valid" required><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="">
-                                                    <button type="button" class="calendar"><span>달력</span></button>
-                                                </div>
-                                            </dd>
-                                        </div>
+                                                <button type="button" class="btn medium type01 btnSearch" id="btnSearch" name="btnSearch" aria-haspopup="dialog">검색</button>
+                                            </div>
+                                        </dd>
+                                        <dt class="req_mark"><label for="status">상태<span class="blind"> 필수입력</span></label></dt>
+                                        <dd>
+                                            <select class="new_down" id="status" name="status" title="학적 상태 선택" required>
+                                                <option value="" selected disabled>학적 상태를 선택해 주세요.</option>
+                                                <option value="graduated">졸업</option>
+                                                <option value="expected">졸업예정</option>
+                                            </select>
+                                        </dd>
+                                        <dt class="req_mark"><label for="gradDate">졸업(예정) 년월<span class="blind"> 필수입력</span></label></dt>
+                                        <dd>
+                                            <div class="date_area">
+                                                <input type="text" title="졸업(예정) 날짜 입력" id="gradDate" name="gradDate" value="" placeholder="2025-01" class="hasDatepicker valid" required><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="">
+                                                <button type="button" class="calendar"><span>달력</span></button>
+                                            </div>
+                                        </dd>
                                     </dl>
                                 </div>
                             </div>
