--- a/mobile/UI_ADHPCfM01-4.html
+++ b/mobile/UI_ADHPCfM01-4.html
@@ -37,7 +37,7 @@
 
                         <div class="iap_list_form">
                             <div class="total_hd_wrap mb8"><p>전체 <span class="count">0</span>건</p></div>
-                            <ul class="iap_list_ul after_border">
+                            <ul class="iap_list_ul">
                                 <li class="iap_list_li">
                                     <ul class="iap_inner_ul">
                                         <li class="iap_inner_li">
@@ -75,15 +75,178 @@
                                             </div>
                                         </li>
                                     </ul>
+                                    <div class="toggle_wrap">
+                                        <ul class="toggle_inner_ul">
+                                            <li>
+                                                <div class="apply_summary_status">
+                                                    <p class="status_label">변경신청</p>
+                                                    <p class="status_date">2025-00-00</p>
+                                                </div>
+                                                <p class="apply_summary_reason">신청사유 : <br> 사용자가 등록한 변경 신청 사유</p>
+                                            </li>
+                                            <li>
+                                                <div class="apply_summary_status">
+                                                    <p class="status_label">변경신청승인</p>
+                                                    <p class="status_date">2025-00-00</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="apply_summary_status">
+                                                    <p class="status_label">보완요청</p>
+                                                    <p class="status_date">2025-00-00</p>
+                                                </div>
+                                                <p class="apply_summary_reason">신청사유 : <br> 사용자가 등록한 변경 신청 사유</p>
+                                            </li>
+                                            <li>
+                                                <div class="apply_summary_status">
+                                                    <p class="status_label">보완제출</p>
+                                                    <p class="status_date">2025-00-00</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="apply_summary_status">
+                                                    <p class="status_label">변경신청승인</p>
+                                                    <p class="status_date">2025-00-00</p>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                        <div class="toggle_btn_box">
+                                            <button type="button" class="toggle_close active"><span class="s1_r">신청 및 처리현황 이력 접기</span></button>
+                                            <button type="button" class="toggle_open"><span class="s1_r">신청 및 처리현황 이력 조회</span></button>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="iap_list_li">
+                                    <ul class="iap_inner_ul">
+                                        <li class="iap_inner_li">
+                                            <div class="tit"><p>참여연도</p></div>
+                                            <div class="desc"><p>2025</p></div>
+                                        </li>
+                                        <li class="iap_inner_li">
+                                            <div class="tit"><p>취업지원유형</p></div>
+                                            <div class="desc"><p>서비스참여형</p></div>
+                                        </li>
+                                        <li class="iap_inner_li">
+                                            <div class="tit"><p>제출일자</p></div>
+                                            <div class="desc"><p>2025-01-01</p></div>
+                                        </li>
+                                        <li class="iap_inner_li">
+                                            <div class="tit"><p>승인일자</p></div>
+                                            <div class="desc"><p>2025-01-01</p></div>
+                                        </li>
+                                        <li class="iap_inner_li">
+                                            <div class="tit"><p>담당자</p></div>
+                                            <div class="desc"><p>김담당</p></div>
+                                        </li>
+                                        <li class="iap_inner_li">
+                                            <div class="tit"><p>참여연도</p></div>
+                                            <div class="desc twin_desc">
+                                                <span class="desc_trait">승인</span>
+                                                <button type="button" class="btn small type01 ">상세보기</button>
+                                            </div>
+                                        </li>
+                                        <li class="iap_inner_li">
+                                            <div class="tit"><p>변경신청 현황</p></div>
+                                            <div class="desc twin_desc">
+                                                <span class="desc_trait">변경신청 승인</span>
+                                                <button type="button" class="btn small type01 ">변경신청</button>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                    <div class="toggle_wrap">
+                                        <ul class="toggle_inner_ul">
+                                            <li>
+                                                <div class="apply_summary_status">
+                                                    <p class="status_label">변경신청</p>
+                                                    <p class="status_date">2025-00-00</p>
+                                                </div>
+                                                <p class="apply_summary_reason">신청사유 : <br> 사용자가 등록한 변경 신청 사유</p>
+                                            </li>
+                                            <li>
+                                                <div class="apply_summary_status">
+                                                    <p class="status_label">변경신청승인</p>
+                                                    <p class="status_date">2025-00-00</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="apply_summary_status">
+                                                    <p class="status_label">보완요청</p>
+                                                    <p class="status_date">2025-00-00</p>
+                                                </div>
+                                                <p class="apply_summary_reason">신청사유 : <br> 사용자가 등록한 변경 신청 사유</p>
+                                            </li>
+                                            <li>
+                                                <div class="apply_summary_status">
+                                                    <p class="status_label">보완제출</p>
+                                                    <p class="status_date">2025-00-00</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="apply_summary_status">
+                                                    <p class="status_label">변경신청승인</p>
+                                                    <p class="status_date">2025-00-00</p>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                        <div class="toggle_btn_box">
+                                            <button type="button" class="toggle_close active"><span class="s1_r">신청 및 처리현황 이력 접기</span></button>
+                                            <button type="button" class="toggle_open"><span class="s1_r">신청 및 처리현황 이력 조회</span></button>
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
-                        <button type="button" class="btn large fill type01 ">취업지원유형 변경등록</button>
                     </div>
+
+                    <script>
+                        $(document).ready(function () {
+                            // 닫기 버튼 클릭 시
+                            $('.toggle_close').click(function () {
+                                if ($(this).hasClass('active')) {
+                                    const $wrap = $(this).closest('.toggle_wrap');
+
+                                    // 해당 항목만 조작
+                                    $wrap.find('.toggle_inner_ul').css('display', 'none');
+                                    $wrap.find('.toggle_close').removeClass('active').hide();
+                                    $wrap.find('.toggle_open').addClass('active').show();
+                                }
+                            });
+
+                            // 열기 버튼 클릭 시
+                            $('.toggle_open').click(function () {
+                                if ($(this).hasClass('active')) {
+                                    const $wrap = $(this).closest('.toggle_wrap');
+
+                                    $wrap.find('.toggle_inner_ul').css('display', 'block');
+                                    $wrap.find('.toggle_open').removeClass('active').hide();
+                                    $wrap.find('.toggle_close').addClass('active').show();
+                                }
+                            });
+
+                            // 초기 설정 - 각 .toggle_wrap마다 적용
+                            $('.toggle_wrap').each(function () {
+                                const $wrap = $(this);
+                                const $closeBtn = $wrap.find('.toggle_close');
+
+                                if ($closeBtn.hasClass('active')) {
+                                    $wrap.find('.toggle_inner_ul').css('display', 'block');
+                                    $wrap.find('.toggle_open').hide();
+                                    $wrap.find('.toggle_close').show();
+                                } else {
+                                    $wrap.find('.toggle_inner_ul').css('display', 'none');
+                                    $wrap.find('.toggle_open').show();
+                                    $wrap.find('.toggle_close').hide();
+                                }
+                            });
+                        });
+                    </script>
                 </div>
             </div>
             <!-- 본문 내용 -->
 
+
+
+           
 
 
 
