--- a/index_univ.html
+++ b/index_univ.html
@@ -540,6 +540,8 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS02.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCfS02-1.html" target="_blank">Mo-1</a>
+                        <a href="./mobile/UI_ADHPCfS02-2.html" target="_blank">Mo-2</a>
                     </td>
                 </tr>
                 <tr>
@@ -555,6 +557,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS03.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCfS03.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
