--- a/mobile/UI_ADHPCfS03.html
+++ b/mobile/UI_ADHPCfS03.html
@@ -262,7 +262,7 @@
                                 <div class="tit_row_hd mb8">
                                     <div class="txt_box">
                                         <h3 class="t2_sb">취업활동계획</h3>
-                                        <p class="s1_r">총 <span class="count">2</span>건</p>
+                                        <p class="b1_r">총 <span class="count">2</span>건</p>
                                     </div>
                                     <div class="select_area">
                                         <div class="view_select_box button_box"><button type="button" class="btn type03"><span class="s1_r">행 추가</span></button></div>
@@ -290,8 +290,8 @@
                                                 <div class="dt">중점영역</div>
                                                 <div class="dd">
                                                     <select class="new_down" title="중점영역 선택">
-                                                        <option disabled selected>중점영역 선택</option>
-                                                        <option>TEST</option>
+                                                        <option disabled>중점영역 선택</option>
+                                                        <option selected>자격취득</option>
                                                         <option>TEST</option>
                                                     </select>
                                                 </div>
@@ -300,8 +300,8 @@
                                                 <div class="dt">참여방법</div>
                                                 <div class="dd">
                                                     <select class="new_down" title="참여방법 선택">
-                                                        <option disabled selected>선택</option>
-                                                        <option>TEST</option>
+                                                        <option disabled>선택</option>
+                                                        <option selected>온라인</option>
                                                         <option>TEST</option>
                                                     </select>
                                                 </div>
@@ -310,12 +310,12 @@
                                                 <div class="dt">참여기간</div>
                                                 <div class="dd dd_date_row">
                                                     <div class="date_area">
-                                                        <input type="text" title="참여기간 시작" id="참여기간" name="참여기간" value="" placeholder="YYYY-MM" class="hasDatepicker valid" required=""><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="">
+                                                        <input type="text" title="참여기간 시작" id="참여기간" name="참여기간" value="" placeholder="YYYY-MM" class="hasDatepicker valid" required=""><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="2025-01">
                                                         <button type="button" class="calendar"><span>달력</span></button>
                                                     </div>
                                                     <span class="b1_sb">~</span>
                                                     <div class="date_area">
-                                                        <input type="text" title="참여기간 종료" id="참여기간" name="참여기간" value="" placeholder="YYYY-MM" class="hasDatepicker valid" required=""><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="">
+                                                        <input type="text" title="참여기간 종료" id="참여기간" name="참여기간" value="" placeholder="YYYY-MM" class="hasDatepicker valid" required=""><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="2025-01">
                                                         <button type="button" class="calendar"><span>달력</span></button>
                                                     </div>
                                                 </div>
@@ -324,7 +324,7 @@
                                                 <div class="dt">참여시간</div>
                                                 <div class="dd dd_row_ipt">
                                                     <span class="box_ipt new_ipt">
-                                                        <input type="text" class="input_txt" title="참여시간" placeholder="">
+                                                        <input type="text" class="input_txt" title="참여시간" placeholder="" value="10">
                                                         <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                                     </span>
                                                     <span class="s1_b row_ipt_txt">시간</span>
@@ -334,7 +334,7 @@
                                                 <div class="dt">참여기관(교내)</div>
                                                 <div class="dd">
                                                     <span class="box_ipt new_ipt">
-                                                        <input type="text" class="input_txt" title="교내참여기관" placeholder="">
+                                                        <input type="text" class="input_txt" title="교내참여기관" placeholder="" value="교내">
                                                         <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                                     </span>
                                                 </div>
@@ -343,7 +343,7 @@
                                                 <div class="dt">참여기관(외부)</div>
                                                 <div class="dd">
                                                     <span class="box_ipt new_ipt">
-                                                        <input type="text" class="input_txt" title="외부참여기관" placeholder="">
+                                                        <input type="text" class="input_txt" title="외부참여기관" placeholder="" value="교외">
                                                         <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                                     </span>
                                                 </div>
@@ -352,9 +352,9 @@
                                                 <div class="dt">목표달성시기</div>
                                                 <div class="dd">
                                                     <select class="new_down" title="목표달성시기">
-                                                        <option disabled selected>선택</option>
-                                                        <option>TEST</option>
-                                                        <option>TEST</option>
+                                                        <option disabled>선택</option>
+                                                        <option>1학기</option>
+                                                        <option selected>2학기</option>
                                                     </select>
                                                 </div>
                                             </li>
@@ -363,7 +363,7 @@
                                                 <div class="dd">
                                                     <div class="text_form_box">
                                                         <div class="text_form_inner">
-                                                            <textarea title="활동내용" placeholder="세부활동 내용을 작성해 주세요." required></textarea>
+                                                            <textarea title="활동내용" placeholder="세부활동 내용을 작성해 주세요." required>입력한 내용 TEST TEST TEST</textarea>
                                                         </div>
                                                         <div class="text_info">
                                                             <p class="count_info"><span class="result_byte">0</span> / <span class="max_byte">400</span> Byte</p>
@@ -491,15 +491,16 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="box_end_wrap" role="region" aria-label="제출 정보 영역">
-                                <div class="btn_box flex_wrap mt24">
-                                    <button type="button" class="btn large type03 fw400">목록</button>
-                                    <button type="button" class="btn large type03 fw400">초기화</button>
-                                    <button type="button" class="btn large line_blue">저장</button>
-                                    <button type="button" class="btn large fill type01">제출</button>
-                                </div>
-                            </div>  
                         </div>
+                        <div class="box_end_wrap" role="region" aria-label="제출 정보 영역">
+                            <div class="btn_box flex_wrap mt24">
+                                <button type="button" class="btn large type03 fw400 wper33">목록</button>
+                                <button type="button" class="btn large type03 fw400 wper33">초기화</button>
+                                <button type="button" class="btn large type03 fw400 wper33">삭제</button>
+                                <button type="button" class="btn large line_blue">저장</button>
+                                <button type="button" class="btn large fill type01">제출</button>
+                            </div>
+                        </div>  
                         
 
 
