--- a/mobile/UI_ADHPCfS02-2.html
+++ b/mobile/UI_ADHPCfS02-2.html
@@ -262,7 +262,7 @@
                                 <div class="tit_row_hd mb8">
                                     <div class="txt_box">
                                         <h3 class="t2_sb">취업활동계획</h3>
-                                        <p class="s1_r">총 <span class="count">2</span>건</p>
+                                        <p class="b1_r">총 <span class="count">2</span>건</p>
                                     </div>
                                     <div class="select_area">
                                         <div class="view_select_box button_box"><button type="button" class="btn type03"><span class="s1_r">행 추가</span></button></div>
@@ -491,15 +491,15 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="box_end_wrap" role="region" aria-label="제출 정보 영역">
-                                <div class="btn_box flex_wrap mt24">
-                                    <button type="button" class="btn large type03 fw400">목록</button>
-                                    <button type="button" class="btn large type03 fw400">초기화</button>
-                                    <button type="button" class="btn large line_blue">저장</button>
-                                    <button type="button" class="btn large fill type01">제출</button>
-                                </div>
-                            </div>  
                         </div>
+                        <div class="box_end_wrap" role="region" aria-label="제출 정보 영역">
+                            <div class="btn_box flex_wrap mt24">
+                                <button type="button" class="btn large type03 fw400">목록</button>
+                                <button type="button" class="btn large type03 fw400">초기화</button>
+                                <button type="button" class="btn large line_blue">저장</button>
+                                <button type="button" class="btn large fill type01">제출</button>
+                            </div>
+                        </div>  
                         
 
 
