--- a/index_univ.html
+++ b/index_univ.html
@@ -80,6 +80,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCaM01" target="_blank" class="none">PC</a>
+                        <a href="./mobile/UI_ADHPCaM01" target="_blank" class="none">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -573,6 +574,8 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS04.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCfS04-1.html" target="_blank">Mo-1</a>
+                        <a href="./mobile/UI_ADHPCfS04-2.html" target="_blank">Mo-2</a>
                     </td>
                 </tr>
                 <tr>
@@ -588,6 +591,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS05.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCfS05.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -603,6 +607,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS06.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCfS06.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -618,6 +623,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCfS07.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCfS07.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
