--- a/mobile/UI_ADHPCfS07.html
+++ b/mobile/UI_ADHPCfS07.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>점프업 - IAP관리_조회(제출)_기타선택 시</title>
+        <title>점프업 - IAP관리_조회(변경제출)</title>
         <script src="../mobile/include/js/head.js"></script>
         <script src="../mobile/include/js/mobile-ui-util.js"></script>
         <script src="../mobile/include/js/mobile-ui.js"></script>
@@ -65,13 +65,13 @@
                                             <fieldset class="radio_filed filed_row" disabled>
                                                 <legend class="sr_only">취업지원유형</legend>
                                                 <div class="new_radio_item">
-                                                    <input type="radio" id="자기주도형" name="취업지원유형" value="" role="radio">
+                                                    <input type="radio" id="자기주도형" name="취업지원유형" value="" role="radio" checked>
                                                     <label for="자기주도형" class="custom_radio">
                                                         <span class="label_text">자기주도형</span>
                                                     </label>
                                                 </div>
                                                 <div class="new_radio_item">
-                                                    <input type="radio" id="서비스참여형" name="취업지원유형" value=""role="radio" checked>
+                                                    <input type="radio" id="서비스참여형" name="취업지원유형" value=""role="radio" >
                                                     <label for="서비스참여형" class="custom_radio">
                                                         <span class="label_text">서비스참여형</span>
                                                     </label>
@@ -146,9 +146,6 @@
                                         <button type="button" class="btn type03"><span class="s1_r">전체 펼치기</span></button>
                                     </div>
                                 </div>
-
-
-
 
                                 <div class="line_inner_wrap line_inner_result">
                                     <div class="line_inner_box">
@@ -269,6 +266,19 @@
                             </div>
                         </div>
 
+                        <div class="chg_reason_wrap after_border">
+                            <h3 class="t2_sb">변경신청 사유</h3>
+                            <div class="line_inner_box">
+                                <div class="line_inner_txt">
+                                    <p>입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다.입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다.입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다.입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다.입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. 입력된 변경신청 사유가 들어갑니다. </p>
+                                </div>
+                                <div class="act_fullbox">
+                                    <button type="button" class="close_btn" aria-expanded="true"><span>접기</span></button>
+                                    <button type="button" class="open_btn active" aria-expanded="false"><span>더보기</span></button>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="prog_wrap prog_applysummary box_group_wrap box_table_wrap after_border">
                             <h3 class="t2_sb">신청 및 처리현황</h3>
                             <div class="apply_summary_wrap mt8" role="region">
@@ -335,6 +345,32 @@
                             $box.find(".open_btn").removeClass("active").attr("aria-expanded", "false");
                             $box.find(".close_btn").addClass("active").attr("aria-expanded", "true");
                         });
+                    });
+                });
+
+                // 더보기 버튼
+                $(function() {
+                    $(".open_btn").on("click", function() {
+                        var $wrap = $(this).closest(".line_inner_box");
+                        var $txt = $wrap.find(".line_inner_txt");
+                        var $openBtn = $wrap.find(".open_btn");
+                        var $closeBtn = $wrap.find(".close_btn");
+
+                        $txt.addClass("fullpage");
+                        $openBtn.removeClass("active").attr("aria-expanded", "true");
+                        $closeBtn.addClass("active").attr("aria-expanded", "true").focus();
+                    });
+
+                    // 접기 버튼
+                    $(".close_btn").on("click", function() {
+                        var $wrap = $(this).closest(".line_inner_box");
+                        var $txt = $wrap.find(".line_inner_txt");
+                        var $openBtn = $wrap.find(".open_btn");
+                        var $closeBtn = $wrap.find(".close_btn");
+
+                        $txt.removeClass("fullpage");
+                        $closeBtn.removeClass("active").attr("aria-expanded", "false");
+                        $openBtn.addClass("active").attr("aria-expanded", "false").focus();
                     });
                 });
             </script>
