--- a/index_univ.html
+++ b/index_univ.html
@@ -640,6 +640,9 @@
                     <td>
                         <a href="./pc/UI_ADHPCgM01-1.html" target="_blank">PC-1</a>
                         <a href="./pc/UI_ADHPCgM01-2.html" target="_blank">PC-2</a>
+                        <a href="./mobile/UI_ADHPCgM01-1.html" target="_blank">Mo-1</a>
+                        <a href="./mobile/UI_ADHPCgM01-2.html" target="_blank">Mo-2</a>
+                        <a href="./mobile/UI_ADHPCgM01-3.html" target="_blank">Mo-3</a>
                     </td>
                 </tr>
                 <tr>
