--- a/index_univ.html
+++ b/index_univ.html
@@ -658,6 +658,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM02.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCgM02.html" target="_blank" class="none">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -673,6 +674,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM03.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCgM03.html" target="_blank" class="none">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -688,6 +690,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM04.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCgM04.html" target="_blank" class="none">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -703,6 +706,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCgM05.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCgM05.html" target="_blank" class="none">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -719,6 +723,7 @@
                     <td>
                         <a href="./pc/UI_ADHPChM01_1.html" target="_blank">PC-1</a>
                         <a href="./pc/UI_ADHPChM01_2.html" target="_blank">PC-2</a>
+                        <a href="./mobile/UI_ADHPChM01.html" target="_blank" class="none">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -735,6 +740,7 @@
                     <td>
                         <a href="./pc/UI_ADHPChS02-1.html" target="_blank">PC-1</a>
                         <a href="./pc/UI_ADHPChS02-2.html" target="_blank">PC-2</a>
+                        <a href="./mobile/UI_ADHPChM02.html" target="_blank" class="none">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -782,6 +788,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS05.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPChS05.html" target="_blank" class="none">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -798,6 +805,7 @@
                     <td>
                         <a href="./pc/UI_ADHPChS06-1.html" target="_blank">PC-1</a>
                         <a href="./pc/UI_ADHPChS06-2.html" target="_blank">PC-2</a>
+                        <a href="./mobile/UI_ADHPChS06.html" target="_blank" class="none">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -813,6 +821,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS07.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPChS07.html" target="_blank" class="none">Mo</a>
                     </td>
                 </tr>
                 <tr>
@@ -828,6 +837,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPChS08.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPChS08.html" target="_blank" class="none">Mo</a>
                     </td>
                 </tr>
             </tbody>
